Fix In Stock & Out of Stock Wrap issues

--- a/src/components/LabelContent/LabelContent.scss
+++ b/src/components/LabelContent/LabelContent.scss
@@ -43,6 +43,8 @@
 		&--success,
 		&--failed {
 			font-size: 0.875rem;
+			display: inline-block;
+			min-width: max-content;
 			padding: 0.3125rem 0.8125rem;
 			border-radius: 1rem;
 			text-transform: uppercase;
